--- a/RGN/RGN.csproj
+++ b/RGN/RGN.csproj
@@ -152,9 +152,14 @@
     <Content Include="Account\Register.aspx" />
     <Content Include="Account\RegisterExternalLogin.aspx" />
     <Content Include="AddToCart.Aspx" />
+    <Content Include="Catalog\Images\apparel.jpg" />
+    <Content Include="Catalog\Images\bg.jpg" />
+    <Content Include="Catalog\Images\gloves.jpg" />
+    <Content Include="Catalog\Images\helmet.jpg" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\main.css" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="packages.config" />
